# BSU_OS_collocvium_Vlasenko_10

./: CMakeLists.txt  G-test_delete_duplicate.cpp  G-test_n_factorial.cpp  G-test_rekurs.cpp  README.md  delete_dublicate.cpp  n_factorial  rekurs.cpp
